# tracer

./: .envrc  .gitignore  Cargo.toml  README.org  flake.nix
renders/: 11hollow.ppm  11hollow2.ppm  11refr1.ppm  11refr2.ppm  12cam1.ppm  12camout.ppm  12zoomin.ppm  13dof.ppm  13dof2.ppm  14final.ppm  14final2.ppm  img10.2.ppm  img10.ppm  img10fuzz.ppm  img2.ppm  img4.ppm  img5.ppm  img6.ppm  img7.ppm  img8norm.ppm
src/: camera.rs  hit.rs  main.rs  material.rs  ray.rs  sphere.rs  vec.rs
